# pail-knn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
ansible/: knn.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/knn/files/benchmark-runs/: .gitignore  baseline.sh  baselinepp.sh  benchmark.py  benchmark_scheduler.py  benchmark_worker.py  config.local.json.example  config.py  db.py  full.sh  global.sh  memory.py  palloc.sh  partition.sh  paths.py  pyproject.toml  result_records.py  run.py  run_partition.sh  run_prefix.sh  slim-usqrt.sh  slim.sh  topkbaseline.sh  transformation.sh  witheager.sh  withgrouping.sh
ansible/roles/knn/handlers/: main.yml
ansible/roles/knn/tasks/: common.yml  datasets.yml  experiments.yml  knn.yml  main.yml  preprocessing.yml
ansible/roles/knn/templates/: .gitignore
ansible/roles/knn/vars/: main.yml
cmake/compat/: omp.h
cmake/puffinn/: performance.hpp.patch
evaluation/: .gitignore  plots.py  queries.py  requirements.txt
src/: CMakeLists.txt
src/data/: preprocess.cc  set_data.cc  set_data.hh  set_file_parser.cc  set_file_parser.hh
src/indexing/: inv_index.hh  length_group.hh  tree_point.hh  tvec.hh
src/knn/: CMakeLists.txt  baseline.hh  baselinepp.hh  cmdline.cc  equeue.hh  join.hh  multithreaded_join.hh  puffinn.hh  topk_heap.hh
src/knn/les3/: les3.hh  tgm_c.hh
src/knn/les3/precompute/: l2p_core.py  ptr_embedding.py  pyproject.toml  train_l2p.py
src/knn/partition/: partition.hh
src/knn/transformation/: transformation.hh
src/minhash/: CMakeLists.txt  cmdline.cc  minhash_fast_kheap.hh
src/similarity/: Similarity.hh
src/statistics/: index_statistics.hh  jemalloc_statistics.hh  join_perf.hh  join_statistics.hh  puffinn_statistics.hh  statistics.hh  transformation_statistics.hh
src/timing/: join_timing.hh  timing.hh
src/types/: types.hh
src/util/: cache.hh  git_sha.cc.in  git_sha.hh  set_ops.hh  tab_hash.hh
